# Game

./: .gitignore  CMakeLists.txt  README.md  cmake_install.cmake  main.cpp  point.vert
lib/include/: Object.hpp  Shape.hpp  shader.hpp
lib/src/: CMakeLists.txt  Object.cpp  Shape.cpp  shader.cpp
shader/: point.frag
